--- a/BespokeBikesApi.Tests/BespokeBikesApi.Tests.csproj
+++ b/BespokeBikesApi.Tests/BespokeBikesApi.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -12,6 +12,7 @@
     for Microsoft Testing Platform, please visit:
       https://xunit.net/docs/getting-started/v3/microsoft-testing-platform
     -->
+    <UserSecretsId>89790f80-54fe-436a-9160-ff97e02b0d17</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
