--- a/BespokeBikesApi/appsettings.Development.json
+++ b/BespokeBikesApi/appsettings.Development.json
@@ -4,5 +4,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "Environment": "Development",
+  "DatabaseType": "Sqlite"
 }
