Fixed Swagger Doc generation to include comments. Adjusting controllers to return best practice results. Removed database file from source control.

--- a/BespokeBikesApi/BespokeBikesApi.csproj
+++ b/BespokeBikesApi/BespokeBikesApi.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>153e1ab7-d88a-48c3-ab15-6feac44e9ee5</UserSecretsId>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
